Basic css and html pages.

--- a/index.html
+++ b/index.html
@@ -3,25 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <title>Slass</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-<div id="header">
-
-</div>
-
 <div id="nav">
 
+    <button style="height: 25px; width: 100px;">
+        More
+    </button>
+
+</div>
+<div id="header">
+    <h1 style="text-align: right">
+        Slass
+        <button style=" text-align: left; height: 25px; width: 100px;" >
+
+        </button>
+    </h1>
+
 </div>
 
+
 <div id="section">
+    <h1>
+        Profile
+    </h1>
 
 </div>
 
 <div id="section2">
+    <h1>
+        News Feed
+    </h1>
 
 </div>
 
 <div id="footer">
+    <h1>
+        Footer
+    </h1>
 
 </div>
 
