--- a/index.html
+++ b/index.html
@@ -6,19 +6,12 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-<div id="nav">
-
-    <button style="height: 25px; width: 100px;">
-        More
-    </button>
-
-</div>
 <div id="header">
-    <h1 style="text-align: right">
-        Slass
+    <h1 style="text-align: left">
         <button style=" text-align: left; height: 25px; width: 100px;" >
-
+            More
         </button>
+        Slass
     </h1>
 
 </div>
