--- a/ranking.html
+++ b/ranking.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Slass</title>
     <script src="scripts.js"></script>
-    <link rel="stylesheet" type="text/css" href="style2.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 
@@ -34,6 +34,13 @@
     <h1>
         Profile
     </h1>
+</div>
+
+<div id="section2">
+    <h1>
+        Rankings
+    </h1>
+
 </div>
 
 <div id="footer">
