--- a/index.html
+++ b/index.html
@@ -3,24 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <title>Slass</title>
+    <script src="scripts.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-<div id="nav">
 
-    <button style="height: 25px; width: 100px;">
-        More
-    </button>
-
-</div>
 <div id="header">
-    <h1 style="text-align: right">
-        Slass
-        <button style=" text-align: left; height: 25px; width: 100px;" >
-
-        </button>
-    </h1>
-
+    <ul id="nav">
+        <li><a href="index.html"><button>Home</button></a></li>
+        <li>
+            <a href="#"><button>More</button></a>
+            <ul class="child">
+            <li><a href="index2.html">Ranking</a></li>
+            <li><a href="#">Fight now</a></li>
+            <li><a href="#">Create account/login</a>
+                <ul>
+                    <li><a href="#">10 watt</a></li>
+                    <li><a href="#">20 watt</a></li>
+                    <li><a href="#">30 watt</a></li>
+                </ul>
+            </li>
+            <li><a href="#">More</a></li>
+        </ul>
+        </li>
+    </ul>
 </div>
 
 
@@ -28,7 +34,6 @@
     <h1>
         Profile
     </h1>
-
 </div>
 
 <div id="section2">
