--- a/index.html
+++ b/index.html
@@ -5,12 +5,10 @@
     <title>Slass</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body>
+<body background="http://awesomewallpaper.files.wordpress.com/2012/02/silkwood1080p.jpg">
 <div id="header">
     <h1 style="text-align: left">
-        <button style=" text-align: left; height: 25px; width: 100px;" >
-            More
-        </button>
+
         Slass
     </h1>
 
