--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <li>
             <a href="#"><button>More</button></a>
             <ul class="child">
-            <li><a href="index2.html">Ranking</a></li>
+            <li><a href="ranking.html">Ranking</a></li>
             <li><a href="#">Fight now</a></li>
-            <li><a href="#">Create account/login</a>
+            <li><a href="index2.html">Create account/login</a>
                 <ul>
                     <li><a href="#">10 watt</a></li>
                     <li><a href="#">20 watt</a></li>
