--- a/login.html
+++ b/login.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <title>Slass</title>
     <script src="scripts.js"></script>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style2.css">
 </head>
 <body>
 
 <div id="header">
     <ul id="nav">
-        <li><a href="index.html"><button>Home</button></a></li>
+        <li><a href="login.html"><button>Home</button></a></li>
         <li>
             <a href="#"><button>More</button></a>
             <ul class="child">
