Here you go Chu

--- a/index2.html
+++ b/index2.html
@@ -15,8 +15,8 @@
             <a href="#"><button>More</button></a>
             <ul class="child">
                 <li><a href="ranking.html">Ranking</a></li>
-                <li><a href="#">Fight now</a></li>
-                <li><a href="index2.html">Create account/login</a>
+                <li><a href="index2.html">Fight now</a></li>
+                <li><a href="login1.html">Create account/login</a>
                     <ul>
                         <li><a href="#">10 watt</a></li>
                         <li><a href="#">20 watt</a></li>
@@ -38,7 +38,7 @@
 
 <div id="section2">
     <h1>
-        News Feed
+        Fight now
     </h1>
 
 </div>
