--- a/login1.html
+++ b/login1.html
@@ -15,8 +15,8 @@
             <a href="#"><button>More</button></a>
             <ul class="child">
                 <li><a href="ranking.html">Ranking</a></li>
-                <li><a href="#">Fight now</a></li>
-                <li><a href="index2.html">Create account/login</a>
+                <li><a href="index2.html">Fight now</a></li>
+                <li><a href="login1.html">Create account/login</a>
                     <ul>
                         <li><a href="#">10 watt</a></li>
                         <li><a href="#">20 watt</a></li>
@@ -97,9 +97,60 @@
             </select>
             <select name="day" id="day">
                 <option value="na">Day</option>
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+                <option value="6">6</option>
+                <option value="7">7</option>
+                <option value="8">8</option>
+                <option value="9">9</option>
+                <option value="10">10</option>
+                <option value="11">11</option>
+                <option value="12">12</option>
+                <option value="13">13</option>
+                <option value="14">14</option>
+                <option value="15">15</option>
+                <option value="16">16</option>
+                <option value="17">17</option>
+                <option value="18">18</option>
+                <option value="19">19</option>
+                <option value="20">20</option>
+                <option value="21">21</option>
+                <option value="22">22</option>
+                <option value="23">23</option>
+                <option value="24">24</option>
+                <option value="25">25</option>
+                <option value="26">26</option>
+                <option value="27">27</option>
+                <option value="28">28</option>
+                <option value="29">29</option>
+                <option value="30">30</option>
+                <option value="31">31</option>
             </select>
             <select name="year" id="year">
                 <option value="na">Year</option>
+                <option value="1">1999</option>
+                <option value="2">1998</option>
+                <option value="3">1997</option>
+                <option value="4">1996</option>
+                <option value="5">1995</option>
+                <option value="6">1994</option>
+                <option value="7">1993</option>
+                <option value="8">1992</option>
+                <option value="9">1991</option>
+                <option value="10">1990</option>
+                <option value="11">1989</option>
+                <option value="12">1988</option>
+                <option value="13">1987</option>
+                <option value="14">1986</option>
+                <option value="15">1985</option>
+                <option value="16">1984</option>
+                <option value="17">1983</option>
+                <option value="18">1982</option>
+                <option value="19">1981</option>
+                <option value="20">1980</option>
             </select>
             <script language="JavaScript" type="text/javascript">
                 function changeDate(i){
