--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 =======
     <title>Slass</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="css.css">
 </head>
 <body>
 <div id="header">
