Here you go again Chu, so stop complaining.

--- a/index.html
+++ b/index.html
@@ -43,10 +43,11 @@
         What's going on? <input id="name" />
         <input type ='button' value="Submit" onclick="update()"/>
     </form>
-    <p>
-
-    </p>
-
+    <table id="table" border="1" style="width:100%">
+        <tr>
+            <td>Status</td>
+        </tr>
+    </table>
 </div>
 
 <div id="footer">
