--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </form>
     <table id="table" border="1" style="width:100%">
         <tr>
-            <td>Status</td>
+            <td id="status">Status:</td>
         </tr>
     </table>
 </div>
