--- a/index.html
+++ b/index.html
@@ -2,17 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-<<<<<<< HEAD
-    <title></title>
+    <titleSLass></titleSLass>
+    <link type="text/css" href="style.css">
 </head>
-<body>
-=======
-    <title>Slass</title>
-    <link rel="stylesheet" type="text/css" href="css.css">
-</head>
-<body>
 <div id="header">
-<<<<<<< HEAD
     <ul id="nav">
         <li><a href="index.html"><button>Home</button></a></li>
         <li>
