--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <li><a href="#">30 watt</a></li>
                 </ul>
             </li>
-            <li><a href="#">More</a></li>
+            <li><a href="merch.html">Merch</a></li>
         </ul>
         </li>
     </ul>
@@ -45,7 +45,7 @@
     </form>
     <table id="table" border="1" style="width:100%">
         <tr>
-            <td>Status</td>
+            <td id="status">Status</td>
         </tr>
     </table>
 </div>
