--- a/login1.html
+++ b/login1.html
@@ -23,7 +23,7 @@
                         <li><a href="#">30 watt</a></li>
                     </ul>
                 </li>
-                <li><a href="#">More</a></li>
+                <li><a href="merch.html">Merch</a></li>
             </ul>
         </li>
     </ul>
