--- a/index2.html
+++ b/index2.html
@@ -30,10 +30,94 @@
 </div>
 
 
+
 <div id="section">
     <h1>
         Profile
     </h1>
+    <div id="content" class="clearfix">
+        <section id="left">
+
+            <div id="userStats" class="clearfix">
+
+                <div class="pic">
+
+                    <a href="#"><img src="http://latimesblogs.latimes.com/.a/6a00d8341c630a53ef015394294b4a970b-pi" width="150" height="150" /></a>
+                </div>
+                <div class="data">
+
+                    <li>Name: </li><strong>George St. Pierre</strong>
+
+                    <li>Location: </li><strong>Quebec, Canada</strong>
+
+                    <div class="sep"></div>
+
+                    <ul class="numbers clearfix">
+                        <li>Rank: <strong>1</strong></li>
+
+                        <li class="nobrdr">Matches Won: <strong>25</strong></li>
+
+                    </ul>
+
+                </div>
+
+            </div>
+
+            <h1>About Me:</h1>
+
+            <p>Info about owner of profile</p>
+
+        </section>
+        <section id="right">
+
+
+    </div>
+    <div class="gcontent">
+
+        <div class="head"><h1>Friends List</h1></div>
+
+        <div class="boxy">
+
+            <p>Your friends - 100 total</p>
+
+            <div class="friendslist clearfix">
+
+                <div class="friend">
+
+                    <a href="#"><img src="http://static.dnaindia.com/sites/default/files/2015/10/02/361285-john-cena-2.jpg" width="30" height="30" alt="Jerry K." /></a><span class="friendly"><a href="#">John Cena</a></span>
+
+                </div>
+                <div class="friend">
+
+                    <a href="#"><img src="http://static.comicvine.com/uploads/original/11120/111204980/4281602-mte5ndg0mdu0odc2ntu0nzy3.jpg" width="30" height="30" alt="Katie F." /></a><span class="friendly"><a href="#">Muhammad Ali</a></span>
+
+                </div>
+                <div class="friend">
+
+                    <a href="#"><img src="http://a4.files.biography.com/image/upload/c_fill,cs_srgb,dpr_1.0,g_face,h_300,q_80,w_300/MTE5NTU2MzE2NDE4MzExNjkx.jpg" width="30" height="30" alt="Ash K." /></a><span class="friendly"><a href="#">Jackie Chan</a></span>
+
+                </div>
+                <div class="friend">
+
+                    <a href="#"><img src="http://img1.wikia.nocookie.net/__cb20141121015414/spongebob/images/5/5f/Larry_the_Lobster_in_Ghost_Host-4.png" width="30" height="30" alt="Sponge B." /></a><span class="friendly"><a href="#">Larry The Lobster</a></span>
+
+                </div>
+                <div class="friend">
+
+                    <a href="#"><img src="http://images-cdn.moviepilot.com/images/c_fill,h_706,w_1070/t_mp_quality/hpz0rbf2ydeufej8qxkw/ronda-rousey-was-asked-to-play-captain-marvel-but-not-how-you-d-think-590496.jpg" width="30" height="30" alt="Frank" /></a><span class="friendly"><a href="#">Ronda Rousey</a></span>
+
+                </div>
+                <div class="friend">
+
+                    <a href="#"><img src="http://www.chucknorris.com/store/cn%20old%20pages/photos_files/karate-4.jpg" width="30" height="30" alt="Alexa S." /></a><span class="friendly"><a href="#">Chuck Norris</a></span>
+
+                </div>
+            </div>
+        </div>
+    </div>
+    </section>
+</div>
+
 </div>
 
 <div id="section2">
