made some changes.

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
             <h1>About Me:</h1>
 
-            <p>Info about owner of profile</p>
+            <p>often referred to as GSP, is a Canadian semi-retired mixed martial artist (MMA) and a three-time former Welterweight Champion of the Ultimate Fighting Championship (UFC), having won the title twice in 2006 and 2008, as well as an Interim title in 2007. Frequently cited as one of the greatest MMA fighters of all time, St-Pierre was ranked as the #1 welterweight in the world for several years by Sherdog and numerous other publications.In 2008, 2009, and 2010 he was named the Canadian Athlete of the Year by Rogers Sportsnet. Fight Matrix lists him as the top MMA Welterweight of all time and most accomplished fighter in MMA history.[13][14] On December 13, 2013, St-Pierre vacated the title and decided to take some time off from the sport, though he left the door open for a return.</p>
 
         </section>
         <section id="right">
