Updated pages, added logo to header area. Took out not needed code. Added copyright in the footer, and edited some CSS to get the

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+<div id="logo">
+    <p style="text-align: center;">
+    <img style="height: 50px; width: 50px" src="slass%20logo.png">
+    </p>
+</div>
 <div id="header">
     <ul id="nav">
         <li><a href="index.html"><button>Home</button></a></li>
@@ -16,13 +21,7 @@
             <li><a href="ranking.html">Ranking</a></li>
             <li><a href="index2.html">Fight now</a></li>
             <li><a href="login1.html">Create account/login</a>
-                <ul>
-                    <li><a href="#">10 watt</a></li>
-                    <li><a href="#">20 watt</a></li>
-                    <li><a href="#">30 watt</a></li>
-                </ul>
             </li>
-            <li><a href="merch.html">Merch</a></li>
         </ul>
         </li>
     </ul>
@@ -63,58 +62,58 @@
 
             <h1>About Me:</h1>
 
-            <p>often referred to as GSP, is a Canadian semi-retired mixed martial artist (MMA) and a three-time former Welterweight Champion of the Ultimate Fighting Championship (UFC), having won the title twice in 2006 and 2008, as well as an Interim title in 2007. Frequently cited as one of the greatest MMA fighters of all time, St-Pierre was ranked as the #1 welterweight in the world for several years by Sherdog and numerous other publications.In 2008, 2009, and 2010 he was named the Canadian Athlete of the Year by Rogers Sportsnet. Fight Matrix lists him as the top MMA Welterweight of all time and most accomplished fighter in MMA history.[13][14] On December 13, 2013, St-Pierre vacated the title and decided to take some time off from the sport, though he left the door open for a return.</p>
+            <p>Often referred to as GSP, I am a Canadian semi-retired mixed martial artist (MMA) and a three-time former Welterweight Champion of the Ultimate Fighting Championship (UFC), having won the title twice in 2006 and 2008, as well as an Interim title in 2007. Frequently cited as one of the greatest MMA fighters of all time, I was ranked as the #1 welterweight in the world for several years by Sherdog and numerous other publications.In 2008, 2009, and 2010 I was named the Canadian Athlete of the Year by Rogers Sportsnet. Fight Matrix lists me as the top MMA Welterweight of all time and most accomplished fighter in MMA history.[13][14] On December 13, 2013, I vacated the title and decided to take some time off from the sport, though I left the door open for a return.</p>
 
         </section>
         <section id="right">
 
 
-            </div>
-            <div class="gcontent">
+    </div>
+    <div class="gcontent">
 
-                <div class="head"><h1>Friends List</h1></div>
+        <div class="head"><h1>Friends List</h1></div>
 
-                <div class="boxy">
+        <div class="boxy">
 
-                    <p>Your friends - 100 total</p>
+            <p>Your friends - 100 total</p>
 
-                    <div class="friendslist clearfix">
+            <div class="friendslist clearfix">
 
-                        <div class="friend">
+                <div class="friend">
 
-                            <a href="#"><img src="http://static.dnaindia.com/sites/default/files/2015/10/02/361285-john-cena-2.jpg" width="30" height="30" alt="Jerry K." /></a><span class="friendly"><a href="#">John Cena</a></span>
+                    <img src="http://static.dnaindia.com/sites/default/files/2015/10/02/361285-john-cena-2.jpg" width="30" height="30" alt="Jerry K." /><span class="friendly" style="font-family: cursive">John Cena</span>
 
-                        </div>
-                        <div class="friend">
+                </div>
+                <div class="friend">
 
-                            <a href="#"><img src="http://static.comicvine.com/uploads/original/11120/111204980/4281602-mte5ndg0mdu0odc2ntu0nzy3.jpg" width="30" height="30" alt="Katie F." /></a><span class="friendly"><a href="#">Muhammad Ali</a></span>
+                    <img src="http://static.comicvine.com/uploads/original/11120/111204980/4281602-mte5ndg0mdu0odc2ntu0nzy3.jpg" width="30" height="30" alt="Katie F." /><span class="friendly" style="font-family: cursive">Muhammad Ali</span>
 
-                        </div>
-                        <div class="friend">
+                </div>
+                <div class="friend">
 
-                            <a href="#"><img src="http://a4.files.biography.com/image/upload/c_fill,cs_srgb,dpr_1.0,g_face,h_300,q_80,w_300/MTE5NTU2MzE2NDE4MzExNjkx.jpg" width="30" height="30" alt="Ash K." /></a><span class="friendly"><a href="#">Jackie Chan</a></span>
+                    <img src="http://a4.files.biography.com/image/upload/c_fill,cs_srgb,dpr_1.0,g_face,h_300,q_80,w_300/MTE5NTU2MzE2NDE4MzExNjkx.jpg" width="30" height="30" alt="Ash K." /><span class="friendly" style="font-family: cursive">Jackie Chan</span>
 
-                        </div>
-                        <div class="friend">
+                </div>
+                <div class="friend">
 
-                            <a href="#"><img src="http://img1.wikia.nocookie.net/__cb20141121015414/spongebob/images/5/5f/Larry_the_Lobster_in_Ghost_Host-4.png" width="30" height="30" alt="Sponge B." /></a><span class="friendly"><a href="#">Larry The Lobster</a></span>
+                    <img src="http://img1.wikia.nocookie.net/__cb20141121015414/spongebob/images/5/5f/Larry_the_Lobster_in_Ghost_Host-4.png" width="30" height="30" alt="Sponge B." /><span class="friendly" style="font-family: cursive">Larry The Lobster</span>
 
-                        </div>
-                        <div class="friend">
+                </div>
+                <div class="friend">
 
-                            <a href="#"><img src="http://images-cdn.moviepilot.com/images/c_fill,h_706,w_1070/t_mp_quality/hpz0rbf2ydeufej8qxkw/ronda-rousey-was-asked-to-play-captain-marvel-but-not-how-you-d-think-590496.jpg" width="30" height="30" alt="Frank" /></a><span class="friendly"><a href="#">Ronda Rousey</a></span>
+                    <img src="http://images-cdn.moviepilot.com/images/c_fill,h_706,w_1070/t_mp_quality/hpz0rbf2ydeufej8qxkw/ronda-rousey-was-asked-to-play-captain-marvel-but-not-how-you-d-think-590496.jpg" width="30" height="30" alt="Frank" /><span class="friendly" style="font-family: cursive">Ronda Rousey</span>
 
-                        </div>
-                        <div class="friend">
+                </div>
+                <div class="friend">
 
-                            <a href="#"><img src="http://www.chucknorris.com/store/cn%20old%20pages/photos_files/karate-4.jpg" width="30" height="30" alt="Alexa S." /></a><span class="friendly"><a href="#">Chuck Norris</a></span>
+                    <img src="http://www.chucknorris.com/store/cn%20old%20pages/photos_files/karate-4.jpg" width="30" height="30" alt="Alexa S." /><span class="friendly" style="font-family: cursive">Chuck Norris</span>
 
-                        </div>
-                    </div>
                 </div>
             </div>
-        </section>
+        </div>
     </div>
+    </section>
+</div>
 
 </div>
 
@@ -134,8 +133,8 @@
 </div>
 
 <div id="footer">
-    <h1>
-        Footer
+    <h1 style="font-family: monospace">
+        Copyright &copy; Zachary Kurtz, Efrain Lopez, & Bailey Casselman
     </h1>
 
 </div>
