--- a/login1.html
+++ b/login1.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+<div id="logo">
+    <p style="text-align: center;">
+        <img style="height: 50px; width: 50px" src="slass%20logo.png">
+    </p>
+</div>
 
 <div id="header">
     <ul id="nav">
@@ -17,13 +22,7 @@
                 <li><a href="ranking.html">Ranking</a></li>
                 <li><a href="index2.html">Fight now</a></li>
                 <li><a href="login1.html">Create account/login</a>
-                    <ul>
-                        <li><a href="#">10 watt</a></li>
-                        <li><a href="#">20 watt</a></li>
-                        <li><a href="#">30 watt</a></li>
-                    </ul>
                 </li>
-                <li><a href="merch.html">Merch</a></li>
             </ul>
         </li>
     </ul>
@@ -210,9 +209,10 @@
 </div>
 
 <div id="footer">
-    <h1>
-        Footer
+    <h1 style="font-family: monospace">
+        Copyright &copy; Zachary Kurtz, Efrain Lopez, & Bailey Casselman
     </h1>
+
 
 </div>
 
