--- a/merch.html
+++ b/merch.html
@@ -65,7 +65,7 @@
 
             <h1>About Me:</h1>
 
-            <p>often referred to as GSP, is a Canadian semi-retired mixed martial artist (MMA) and a three-time former Welterweight Champion of the Ultimate Fighting Championship (UFC), having won the title twice in 2006 and 2008, as well as an Interim title in 2007. Frequently cited as one of the greatest MMA fighters of all time, St-Pierre was ranked as the #1 welterweight in the world for several years by Sherdog and numerous other publications.In 2008, 2009, and 2010 he was named the Canadian Athlete of the Year by Rogers Sportsnet. Fight Matrix lists him as the top MMA Welterweight of all time and most accomplished fighter in MMA history.[13][14] On December 13, 2013, St-Pierre vacated the title and decided to take some time off from the sport, though he left the door open for a return.</p>
+            <p>Often referred to as GSP, I am a Canadian semi-retired mixed martial artist (MMA) and a three-time former Welterweight Champion of the Ultimate Fighting Championship (UFC), having won the title twice in 2006 and 2008, as well as an Interim title in 2007. Frequently cited as one of the greatest MMA fighters of all time, I was ranked as the #1 welterweight in the world for several years by Sherdog and numerous other publications.In 2008, 2009, and 2010 I was named the Canadian Athlete of the Year by Rogers Sportsnet. Fight Matrix lists me as the top MMA Welterweight of all time and most accomplished fighter in MMA history.[13][14] On December 13, 2013, I vacated the title and decided to take some time off from the sport, though I left the door open for a return.</p>
 
         </section>
         <section id="right">
@@ -84,32 +84,32 @@
 
                 <div class="friend">
 
-                    <a href="#"><img src="http://static.dnaindia.com/sites/default/files/2015/10/02/361285-john-cena-2.jpg" width="30" height="30" alt="Jerry K." /></a><span class="friendly"><a href="#">John Cena</a></span>
+                    <img src="http://static.dnaindia.com/sites/default/files/2015/10/02/361285-john-cena-2.jpg" width="30" height="30" alt="Jerry K." /><span class="friendly" style="font-family: cursive">John Cena</span>
 
                 </div>
                 <div class="friend">
 
-                    <a href="#"><img src="http://static.comicvine.com/uploads/original/11120/111204980/4281602-mte5ndg0mdu0odc2ntu0nzy3.jpg" width="30" height="30" alt="Katie F." /></a><span class="friendly"><a href="#">Muhammad Ali</a></span>
+                    <img src="http://static.comicvine.com/uploads/original/11120/111204980/4281602-mte5ndg0mdu0odc2ntu0nzy3.jpg" width="30" height="30" alt="Katie F." /><span class="friendly" style="font-family: cursive">Muhammad Ali</span>
 
                 </div>
                 <div class="friend">
 
-                    <a href="#"><img src="http://a4.files.biography.com/image/upload/c_fill,cs_srgb,dpr_1.0,g_face,h_300,q_80,w_300/MTE5NTU2MzE2NDE4MzExNjkx.jpg" width="30" height="30" alt="Ash K." /></a><span class="friendly"><a href="#">Jackie Chan</a></span>
+                    <img src="http://a4.files.biography.com/image/upload/c_fill,cs_srgb,dpr_1.0,g_face,h_300,q_80,w_300/MTE5NTU2MzE2NDE4MzExNjkx.jpg" width="30" height="30" alt="Ash K." /><span class="friendly" style="font-family: cursive">Jackie Chan</span>
 
                 </div>
                 <div class="friend">
 
-                    <a href="#"><img src="http://img1.wikia.nocookie.net/__cb20141121015414/spongebob/images/5/5f/Larry_the_Lobster_in_Ghost_Host-4.png" width="30" height="30" alt="Sponge B." /></a><span class="friendly"><a href="#">Larry The Lobster</a></span>
+                    <img src="http://img1.wikia.nocookie.net/__cb20141121015414/spongebob/images/5/5f/Larry_the_Lobster_in_Ghost_Host-4.png" width="30" height="30" alt="Sponge B." /><span class="friendly" style="font-family: cursive">Larry The Lobster</span>
 
                 </div>
                 <div class="friend">
 
-                    <a href="#"><img src="http://images-cdn.moviepilot.com/images/c_fill,h_706,w_1070/t_mp_quality/hpz0rbf2ydeufej8qxkw/ronda-rousey-was-asked-to-play-captain-marvel-but-not-how-you-d-think-590496.jpg" width="30" height="30" alt="Frank" /></a><span class="friendly"><a href="#">Ronda Rousey</a></span>
+                    <img src="http://images-cdn.moviepilot.com/images/c_fill,h_706,w_1070/t_mp_quality/hpz0rbf2ydeufej8qxkw/ronda-rousey-was-asked-to-play-captain-marvel-but-not-how-you-d-think-590496.jpg" width="30" height="30" alt="Frank" /><span class="friendly" style="font-family: cursive">Ronda Rousey</span>
 
                 </div>
                 <div class="friend">
 
-                    <a href="#"><img src="http://www.chucknorris.com/store/cn%20old%20pages/photos_files/karate-4.jpg" width="30" height="30" alt="Alexa S." /></a><span class="friendly"><a href="#">Chuck Norris</a></span>
+                    <img src="http://www.chucknorris.com/store/cn%20old%20pages/photos_files/karate-4.jpg" width="30" height="30" alt="Alexa S." /><span class="friendly" style="font-family: cursive">Chuck Norris</span>
 
                 </div>
             </div>
