Made changes to rankings

--- a/ranking.html
+++ b/ranking.html
@@ -41,6 +41,26 @@
         Rankings
     </h1>
 
+    <table style="width:100%" border="5px">
+    <tr>
+        <th>Name</th>
+        <th>Location</th>
+        <th>Age</th>
+        <th>Style</th>
+        <th>Rank</th>
+    </tr>
+    <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+    </tr>
+</table>
+
+
+
+
 </div>
 
 <div id="footer">
