Made changes to fight now page and added a submit form

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <titleSLass></titleSLass>
+    <title>Slass</title>
     <link type="text/css" href="style.css">
 </head>
 <div id="header">
