--- a/index2.html
+++ b/index2.html
@@ -40,6 +40,55 @@
     <h1>
         Fight now
     </h1>
+   <table style="width: 100%" border="5px">
+       <tr>
+           <th>Name</th>
+           <th>Located In:</th>
+           <th>Address:</th>
+           <th>Phone:</th>
+           <th>Register</th>
+       </tr>
+       <tr>
+            <td>LA Boxing
+                Boxing Gym </td>
+            <td> Rancho Encanto Plaza</td>
+            <td> 3434 W Greenway Rd #120, Phoenix, AZ 85053</td>
+            <td>(602) 843-5269</td>
+            <td><button>Submit</button></td>
+       </tr>
+       <tr>
+           <td> Grace Fighting Systems Training Center  </td>
+           <td>Phoenix</td>
+           <td> 2501 W Behrend Dr #33, Phoenix, AZ 85027</td>
+           <td>(623) 266-6045</td>
+           <td><button>Submit</button></td>
+       </tr>
+       <tr>
+           <td>The MMA Lab  
+               Martial Arts School
+
+           <td> Glendale</td>
+           <td>17235 N 75th Ave H100, Glendale, AZ 85308 </td>
+           <td>(623) 792-8543 </td></td>
+           <td><button>Submit</button></td>
+       </tr>
+       <tr>
+           <td>Impact MMA  
+               Boxing Gym
+
+           <td> Scottsdale </td>
+           <td>  2954 N Hayden Rd, Scottsdale, AZ 85251</td>
+           <td>(480) 994-1377 </td>
+           <td><button>Submit</button></td>
+       </tr>
+       <tr>
+           <td> Fight Ready MMA & Fitness Gym</td>
+           <td>Pima Crossing </td>
+           <td>  8666 E Shea Blvd #147, Scottsdale, AZ 85260</td>
+           <td>(480) 941-5466</td>
+           <td><button>Submit</button></td>
+       </tr>
+   </table>
 
 </div>
 
