--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 </div>
 <div id="header">
     <ul id="nav">
-        <li><a href="index.html"><button>Home</button></a></li>
+        <li><a href="index.html"><button style="background-color: black; color: white">Home</button></a></li>
         <li>
-            <a href="#"><button>More</button></a>
+            <a href="#"><button style="background-color: black; color: white;">More</button></a>
             <ul class="child">
             <li><a href="ranking.html">Ranking</a></li>
             <li><a href="index2.html">Fight now</a></li>
@@ -29,17 +29,16 @@
 
 
 <div id="section">
-    <h1>
+    <h1 style="font-family: monospace">
         Profile
     </h1>
-    <div id="content" class="clearfix">
         <section id="left">
 
             <div id="userStats" class="clearfix">
 
                 <div class="pic">
 
-                    <a href="#"><img src="http://latimesblogs.latimes.com/.a/6a00d8341c630a53ef015394294b4a970b-pi" width="150" height="150" /></a>
+                    <img src="http://latimesblogs.latimes.com/.a/6a00d8341c630a53ef015394294b4a970b-pi" width="150" height="150" />
                 </div>
                 <div class="data">
 
@@ -68,7 +67,6 @@
         <section id="right">
 
 
-    </div>
     <div class="gcontent">
 
         <div class="head"><h1>Friends List</h1></div>
@@ -81,32 +79,32 @@
 
                 <div class="friend">
 
-                    <img src="http://static.dnaindia.com/sites/default/files/2015/10/02/361285-john-cena-2.jpg" width="30" height="30" alt="Jerry K." /><span class="friendly" style="font-family: cursive">John Cena</span>
+                    <img src="http://static.dnaindia.com/sites/default/files/2015/10/02/361285-john-cena-2.jpg" width="30" height="30" alt="Jerry K." /><span class="friendly" style="font-family: fantasy">John Cena</span>
 
                 </div>
                 <div class="friend">
 
-                    <img src="http://static.comicvine.com/uploads/original/11120/111204980/4281602-mte5ndg0mdu0odc2ntu0nzy3.jpg" width="30" height="30" alt="Katie F." /><span class="friendly" style="font-family: cursive">Muhammad Ali</span>
+                    <img src="http://static.comicvine.com/uploads/original/11120/111204980/4281602-mte5ndg0mdu0odc2ntu0nzy3.jpg" width="30" height="30" alt="Katie F." /><span class="friendly" style="font-family: fantasy">Muhammad Ali</span>
 
                 </div>
                 <div class="friend">
 
-                    <img src="http://a4.files.biography.com/image/upload/c_fill,cs_srgb,dpr_1.0,g_face,h_300,q_80,w_300/MTE5NTU2MzE2NDE4MzExNjkx.jpg" width="30" height="30" alt="Ash K." /><span class="friendly" style="font-family: cursive">Jackie Chan</span>
+                    <img src="http://a4.files.biography.com/image/upload/c_fill,cs_srgb,dpr_1.0,g_face,h_300,q_80,w_300/MTE5NTU2MzE2NDE4MzExNjkx.jpg" width="30" height="30" alt="Ash K." /><span class="friendly" style="font-family: fantasy">Jackie Chan</span>
 
                 </div>
                 <div class="friend">
 
-                    <img src="http://img1.wikia.nocookie.net/__cb20141121015414/spongebob/images/5/5f/Larry_the_Lobster_in_Ghost_Host-4.png" width="30" height="30" alt="Sponge B." /><span class="friendly" style="font-family: cursive">Larry The Lobster</span>
+                    <img src="http://img1.wikia.nocookie.net/__cb20141121015414/spongebob/images/5/5f/Larry_the_Lobster_in_Ghost_Host-4.png" width="30" height="30" alt="Sponge B." /><span class="friendly" style="font-family: fantasy">Larry The Lobster</span>
 
                 </div>
                 <div class="friend">
 
-                    <img src="http://images-cdn.moviepilot.com/images/c_fill,h_706,w_1070/t_mp_quality/hpz0rbf2ydeufej8qxkw/ronda-rousey-was-asked-to-play-captain-marvel-but-not-how-you-d-think-590496.jpg" width="30" height="30" alt="Frank" /><span class="friendly" style="font-family: cursive">Ronda Rousey</span>
+                    <img src="http://images-cdn.moviepilot.com/images/c_fill,h_706,w_1070/t_mp_quality/hpz0rbf2ydeufej8qxkw/ronda-rousey-was-asked-to-play-captain-marvel-but-not-how-you-d-think-590496.jpg" width="30" height="30" alt="Frank" /><span class="friendly" style="font-family: fantasy">Ronda Rousey</span>
 
                 </div>
                 <div class="friend">
 
-                    <img src="http://www.chucknorris.com/store/cn%20old%20pages/photos_files/karate-4.jpg" width="30" height="30" alt="Alexa S." /><span class="friendly" style="font-family: cursive">Chuck Norris</span>
+                    <img src="http://www.chucknorris.com/store/cn%20old%20pages/photos_files/karate-4.jpg" width="30" height="30" alt="Alexa S." /><span class="friendly" style="font-family: fantasy">Chuck Norris</span>
 
                 </div>
             </div>
@@ -115,14 +113,12 @@
     </section>
 </div>
 
-</div>
-
 <div id="section2">
-    <h1>
+    <h1 style="font-family: monospace">
         News Feed
     </h1>
     <form style="font-size: 16px" id="tracker">
-        What's going on? <input id="name" />
+       <strong>What's going on?</strong> <input id="name" />
         <input type ='button' value="Submit" onclick="update()"/>
     </form>
     <table id="table" border="1" style="width:100%">
@@ -134,7 +130,7 @@
 
 <div id="footer">
     <h1 style="font-family: monospace">
-        Copyright &copy; Zachary Kurtz, Efrain Lopez, & Bailey Casselman
+        Copyright &copy; Slass: Zachary Kurtz, Efrain Lopez, Christopher Chu, & Bailey Casselman
     </h1>
 
 </div>
