--- a/index2.html
+++ b/index2.html
@@ -15,9 +15,9 @@
 
 <div id="header">
     <ul id="nav">
-        <li><a href="index.html"><button>Home</button></a></li>
+        <li><a href="index.html"><button style="background-color: black; color: white;">Home</button></a></li>
         <li>
-            <a href="#"><button>More</button></a>
+            <a href="#"><button style="background-color: black; color: white;">More</button></a>
             <ul class="child">
                 <li><a href="ranking.html">Ranking</a></li>
                 <li><a href="index2.html">Fight now</a></li>
@@ -31,10 +31,9 @@
 
 
 <div id="section">
-    <h1>
+    <h1 style="font-family: monospace">
         Profile
     </h1>
-    <div id="content" class="clearfix">
         <section id="left">
 
             <div id="userStats" class="clearfix">
@@ -81,32 +80,32 @@
 
                 <div class="friend">
 
-                   <img src="http://static.dnaindia.com/sites/default/files/2015/10/02/361285-john-cena-2.jpg" width="30" height="30" alt="Jerry K." /><span class="friendly" style="font-family: cursive">John Cena</span>
+                   <img src="http://static.dnaindia.com/sites/default/files/2015/10/02/361285-john-cena-2.jpg" width="30" height="30" alt="Jerry K." /><span class="friendly" style="font-family: fantasy">John Cena</span>
 
                 </div>
                 <div class="friend">
 
-                    <img src="http://static.comicvine.com/uploads/original/11120/111204980/4281602-mte5ndg0mdu0odc2ntu0nzy3.jpg" width="30" height="30" alt="Katie F." /><span class="friendly" style="font-family: cursive">Muhammad Ali</span>
+                    <img src="http://static.comicvine.com/uploads/original/11120/111204980/4281602-mte5ndg0mdu0odc2ntu0nzy3.jpg" width="30" height="30" alt="Katie F." /><span class="friendly" style="font-family: fantasy">Muhammad Ali</span>
 
                 </div>
                 <div class="friend">
 
-                    <img src="http://a4.files.biography.com/image/upload/c_fill,cs_srgb,dpr_1.0,g_face,h_300,q_80,w_300/MTE5NTU2MzE2NDE4MzExNjkx.jpg" width="30" height="30" alt="Ash K." /><span class="friendly" style="font-family: cursive">Jackie Chan</span>
+                    <img src="http://a4.files.biography.com/image/upload/c_fill,cs_srgb,dpr_1.0,g_face,h_300,q_80,w_300/MTE5NTU2MzE2NDE4MzExNjkx.jpg" width="30" height="30" alt="Ash K." /><span class="friendly" style="font-family: fantasy">Jackie Chan</span>
 
                 </div>
                 <div class="friend">
 
-                    <img src="http://img1.wikia.nocookie.net/__cb20141121015414/spongebob/images/5/5f/Larry_the_Lobster_in_Ghost_Host-4.png" width="30" height="30" alt="Sponge B." /><span class="friendly" style="font-family: cursive">Larry The Lobster</span>
+                    <img src="http://img1.wikia.nocookie.net/__cb20141121015414/spongebob/images/5/5f/Larry_the_Lobster_in_Ghost_Host-4.png" width="30" height="30" alt="Sponge B." /><span class="friendly" style="font-family: fantasy">Larry The Lobster</span>
 
                 </div>
                 <div class="friend">
 
-                   <img src="http://images-cdn.moviepilot.com/images/c_fill,h_706,w_1070/t_mp_quality/hpz0rbf2ydeufej8qxkw/ronda-rousey-was-asked-to-play-captain-marvel-but-not-how-you-d-think-590496.jpg" width="30" height="30" alt="Frank" /><span class="friendly" style="font-family: cursive">Ronda Rousey</span>
+                   <img src="http://images-cdn.moviepilot.com/images/c_fill,h_706,w_1070/t_mp_quality/hpz0rbf2ydeufej8qxkw/ronda-rousey-was-asked-to-play-captain-marvel-but-not-how-you-d-think-590496.jpg" width="30" height="30" alt="Frank" /><span class="friendly" style="font-family: fantasy">Ronda Rousey</span>
 
                 </div>
                 <div class="friend">
 
-                  <img src="http://www.chucknorris.com/store/cn%20old%20pages/photos_files/karate-4.jpg" width="30" height="30" alt="Alexa S." /><span class="friendly" style="font-family: cursive">Chuck Norris</span>
+                  <img src="http://www.chucknorris.com/store/cn%20old%20pages/photos_files/karate-4.jpg" width="30" height="30" alt="Alexa S." /><span class="friendly" style="font-family: fantasy">Chuck Norris</span>
 
                 </div>
             </div>
@@ -115,20 +114,76 @@
     </section>
 </div>
 
-</div>
-
 <div id="section2">
     <h1>
         Fight now
     </h1>
+    <table style="width: 100%" border="5px">
+        <tr>
+            <th>Name</th>
+            <th>Located In:</th>
+            <th>Address:</th>
+            <th>Phone:</th>
+            <th>Register</th>
+        </tr>
+        <tr>
+            <td>LA Boxing
+                Boxing Gym </td>
+            <td> Rancho Encanto Plaza</td>
+            <td> 3434 W Greenway Rd #120, Phoenix, AZ 85053</td>
+            <td>(602) 843-5269</td>
+            <td><form action= submit.html>
+                <input type="submit" value="submit">
+            </form></td>
+        </tr>
+        <tr>
+            <td> Grace Fighting Systems Training Center  </td>
+            <td>Phoenix</td>
+            <td> 2501 W Behrend Dr #33, Phoenix, AZ 85027</td>
+            <td>(623) 266-6045</td>
+            <td><form action= submit.html>
+                <input type="submit" value="submit">
+            </form></td>
+        </tr>
+        <tr>
+            <td>The MMA Lab  
+                Martial Arts School
+
+            <td> Glendale</td>
+            <td>17235 N 75th Ave H100, Glendale, AZ 85308 </td>
+            <td>(623) 792-8543 </td></td>
+            <td><form action= submit.html>
+                <input type="submit" value="submit">
+            </form></td>
+        </tr>
+        <tr>
+            <td>Impact MMA  
+                Boxing Gym
+
+            <td> Scottsdale </td>
+            <td>  2954 N Hayden Rd, Scottsdale, AZ 85251</td>
+            <td>(480) 994-1377 </td>
+            <td><form action= submit.html>
+                <input type="submit" value="submit">
+            </form></td>
+        </tr>
+        <tr>
+            <td> Fight Ready MMA & Fitness Gym</td>
+            <td>Pima Crossing </td>
+            <td>  8666 E Shea Blvd #147, Scottsdale, AZ 85260</td>
+            <td>(480) 941-5466</td>
+            <td><form action= submit.html>
+                <input type="submit" value="submit">
+            </form></td>
+        </tr>
+    </table>
 
 </div>
 
 <div id="footer">
     <h1 style="font-family: monospace">
-    Copyright &copy; Zachary Kurtz, Efrain Lopez, & Bailey Casselman
-</h1>
-
+        Copyright &copy; Slass: Zachary Kurtz, Efrain Lopez, Christopher Chu, & Bailey Casselman
+    </h1>
 </div>
 
 </body>
