--- a/login1.html
+++ b/login1.html
@@ -15,9 +15,9 @@
 
 <div id="header">
     <ul id="nav">
-        <li><a href="index.html"><button>Home</button></a></li>
+        <li><a href="index.html"><button style="background-color: black; color: white;">Home</button></a></li>
         <li>
-            <a href="#"><button>More</button></a>
+            <a href="#"><button style="background-color: black; color: white;">More</button></a>
             <ul class="child">
                 <li><a href="ranking.html">Ranking</a></li>
                 <li><a href="index2.html">Fight now</a></li>
@@ -31,7 +31,7 @@
 
 <div id="section">
     <form  action="login.php" autocomplete="on">
-        <h1>Log in</h1>
+        <h1 style="font-family: monospace">Log in</h1>
         <p>
             <label for="username" class="uname" data-icon="u" >Username:</label>
             <input id="username" name="username" required="required" type="text" placeholder="Username"/>
@@ -52,7 +52,7 @@
 
 <div id="section2">
     <form  action="register.php" autocomplete="on">
-        <h1> Sign up </h1>
+        <h1 style="font-family: monospace"> Sign up </h1>
         <p>
             <label for="firstnamesignup" class="fname" data-icon="u">First Name:</label>
             <input id="firstnamesignup" name="firstnamesignup" required="required" type="text" placeholder="First" />
@@ -210,9 +210,8 @@
 
 <div id="footer">
     <h1 style="font-family: monospace">
-        Copyright &copy; Zachary Kurtz, Efrain Lopez, & Bailey Casselman
+        Copyright &copy; Slass: Zachary Kurtz, Efrain Lopez, Christopher Chu & Bailey Casselman
     </h1>
-
 
 </div>
 
